# stokvel-coin

./: LICENSE  README.md  history.txt  notes.txt.bak
bank/: CMakeLists.txt  README.txt
bank/include/: bank.hpp
bank/src/: CMakeLists.txt  bank.cpp
eosiostokveltoken/: CMakeLists.txt  README.txt
eosiostokveltoken/include/: eosiostokveltoken.hpp
eosiostokveltoken/ricardian/: eosiostokveltoken.contracts.md
eosiostokveltoken/src/: CMakeLists.txt  eosiostokveltoken.cpp
include/eosio.token/: bank.hpp  eosio.stokvel.token.hpp
src/: bank.cpp  eosio.stokvel.token.cpp
